--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ body {
     align-items: center;
 }
 
-p {
+#timer, #resetBtn {
     color: black;
     padding: 20px;
     font-size: 30px;
@@ -33,8 +33,4 @@ p {
 #quizBox{
     display: flex;
     flex-direction: column;
-}
-
-#quizBox>h1{
-
 }
