--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     box-sizing: border-box;
 }
 
@@ -10,12 +10,12 @@ body {
     margin: 0px;
 }
 
-h1{
-    margin:auto; 
-    text-align:center;
+h1 {
+    margin: auto;
+    text-align: center;
 }
 
-.topBar{
+.topBar {
     display: flex;
     justify-content: space-between;
     width: 100%;
@@ -29,15 +29,18 @@ h1{
     margin: 0px;
 }
 
-#startResetBtn{
+#startResetBtn {
     background-color: rgb(194, 129, 55);
     border: solid 5px;
+    min-width: 150px;
 }
 
-#content{
+#content {
     display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     width: 100%;
     padding: 20px;
     margin: 30px;
-    justify-content: center;
 }
