--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,3 +51,17 @@ h1 {
     border-radius: 10px;
     margin-top: 5px;
 }
+
+ul{
+    list-style-type: none;
+    padding: 0px;
+    width: 33%;
+    display:flex;
+    flex-direction: column;
+}
+
+li{
+    justify-content: space-between;
+    flex-direction: row;
+    display: flex;
+}
