--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,14 +23,14 @@ h1 {
     align-items: center;
 }
 
-#timer, #startResetBtn {
+#timer, .staticBtn {
     color: black;
     padding: 20px;
     font-size: 30px;
     margin: 0px;
 }
 
-#startResetBtn {
+.staticBtn {
     background-color: rgb(194, 129, 55);
     border: solid 5px;
     min-width: 150px;
